--- a/blocks/ezee_constellate/styles.css
+++ b/blocks/ezee_constellate/styles.css
@@ -165,13 +165,16 @@
     border: 1px solid #eee;
     border-collapse: collapse;
     padding: .625em;
+    font-size: 14px !important;
 }
 
 .constellate-staff-list th {
     background: #57c5d7;
     color: #fff;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 14px !important;
+    font-weight: 600;
+    text-align: center;
 }
 
 .constellate-staff-list th.last {
@@ -211,7 +214,6 @@
     table td {
         border-bottom: 1px solid #ddd;
         display: block;
-        font-size: 14px;
         text-align: right;
     }
 
