Update dashboard bar chart

--- a/blocks/ezee_constellate/templates/dashboard.mustache
+++ b/blocks/ezee_constellate/templates/dashboard.mustache
@@ -33,7 +33,7 @@
     <canvas id="PercentageChart"></canvas>
 </div>
 <div class="constellate-chart-container">
-    <canvas id="UserChart"></canvas>
+    <canvas id="CourseChart"></canvas>
 </div>
 
 <hr class="constellate-separator">
