--- a/blocks/ezee_constellate/templates/dashboard.mustache
+++ b/blocks/ezee_constellate/templates/dashboard.mustache
@@ -19,7 +19,7 @@
     <div class="constellate-dashboard-panel constellate-color3">
         <i class="fas fa-list-alt"></i>
         <div>
-            <span class="constellate-panel-number">2</span>
+            <span class="constellate-panel-number">{{learningplans}}</span>
             <span class="constellate-panel-text">Learning Plans</span>
         </div>
     </div>
@@ -28,11 +28,11 @@
 
 <hr class="constellate-separator">
 
-<div class="constellate-chart-container">
+<div class="constellate-chart-container pie">
     <div id="ChartPercentage" class="chart-percentage-label"></div>
     <canvas id="PercentageChart"></canvas>
 </div>
-<div class="constellate-chart-container">
+<div class="constellate-chart-container bar">
     <canvas id="CourseChart"></canvas>
 </div>
 
@@ -41,48 +41,3 @@
 <div id="constellate-activity-chart" class="constellate-chart-container-wide {{graphdisplay}}">
     <canvas id="DateChart"></canvas>
 </div>
-
-<table id="constellate-staff-table" class="constellate-staff-list {{tabledisplay}}">
-    <tr>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Email</th>
-        <th>Assigned</th>
-        <th>Completed</th>
-        <th>% Completion</th>
-        <th></th>
-    </tr>
-    {{#tableusers}}
-    <tr>
-        <td>{{firstname}}</td>
-        <td>{{lastname}}</td>
-        <td>{{email}}</td>
-        <td class="center-value">{{assignedcourses}}</td>
-        <td class="center-value">{{completedcourses}}</td>
-        <td class="center-value">{{completionpercentage}}%</td>
-        <td class="center-value"><a class="btn btn-primary btn-constellate" href='{{profileurl}}?id={{id}}'
-                target="_blank">View</a></td>
-    </tr>
-    {{/tableusers}}
-</table>
-
-<br>
-
-<a id="constellate-toggle-btn" class="btn btn-primary btn-constellate" href='javascript: ToggleView();'>Show Activity</a>
-
-<script type="text/javascript">
-
-    function ToggleView() {
-        if ($('#constellate-staff-table').is(':visible')){
-            $('#constellate-staff-table').hide();
-            $('#constellate-activity-chart').show();
-            $('#constellate-toggle-btn').text('Show Staff');
-        }
-        else{
-            $('#constellate-staff-table').show();
-            $('#constellate-activity-chart').hide();
-            $('#constellate-toggle-btn').text('Show Activity');
-        }
-    }
-
-</script>
