Aligning to manager userid

--- a/blocks/ezee_constellate/templates/dashboard.mustache
+++ b/blocks/ezee_constellate/templates/dashboard.mustache
@@ -1,23 +1,21 @@
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" />
-
 <h2 class="constellate-manager-name">Manager: {{manager}}</h2>
 <div class="constellate-dashboard-panel-container">
     <div class="constellate-dashboard-panel constellate-color1">
-        <i class="fas fa-users"></i>
+        <i class="fa fa-users"></i>
         <div>
             <span class="constellate-panel-number">{{staffcount}}</span>
             <span class="constellate-panel-text">Assigned Staff</span>
         </div>
     </div>
     <div class="constellate-dashboard-panel constellate-color2">
-        <i class="fas fa-graduation-cap"></i>
+        <i class="fa fa-graduation-cap"></i>
         <div>
             <span class="constellate-panel-number">{{coursetotal}}</span>
             <span class="constellate-panel-text">Assigned Courses</span>
         </div>
     </div>
     <div class="constellate-dashboard-panel constellate-color3">
-        <i class="fas fa-list-alt"></i>
+        <i class="fa fa-th-list"></i>
         <div>
             <span class="constellate-panel-number">{{learningplans}}</span>
             <span class="constellate-panel-text">Learning Plans</span>
