--- a/blocks/ezee_constellate/templates/staffenrolled.mustache
+++ b/blocks/ezee_constellate/templates/staffenrolled.mustache
@@ -8,7 +8,7 @@
     </tr>
     {{#tableusers}}
     <tr>
-        <td><a href='{{profileurl}}?id={{id}}' target="_blank">{{firstname}} {{lastname}} <i class="fas fa-external-link-alt"></i></a></td>
+        <td><a href='{{profileurl}}?id={{id}}' target="_blank">{{firstname}} {{lastname}} <i class="fa fa-external-link"></i></a></td>
         <td class="center-value" title="User has completed {{completedcourses}} out of {{assignedcourses}} courses">
             <div class="constellate-progress-container">
                 <div class="constellate-progress-bar {{progressclass}}" style="width:{{completionpercentage}}%">
