--- a/blocks/ezee_constellate/templates/stafflearningplan.mustache
+++ b/blocks/ezee_constellate/templates/stafflearningplan.mustache
@@ -10,8 +10,8 @@
     </tr>
     {{#tableusers}}
     <tr>
-        <td><a href='{{profileurl}}?id={{id}}' target="_blank">{{firstname}} {{lastname}}<i class="fas fa-external-link-alt"></i></a></td>
-        <td>{{learningplan}}</td>
+        <td><a href='{{profileurl}}?id={{id}}' target="_blank">{{firstname}} {{lastname}}<i class="fa fa-external-link"></i></a></td>
+        <td><a href='{{planurl}}?userid={{id}}' target="_blank">{{learningplan}}<i class="fa fa-external-link"></i></a></td>
         <td class="center-value" title="User has completed {{completedcompetencies}} out of {{plancompetencies}} plan competencies">
             <div class="constellate-progress-container">
                 <div class="constellate-progress-bar {{progressclass}}" style="width:{{completionpercentage}}%">
