--- a/blocks/ezee_constellate/templates/dashboard.mustache
+++ b/blocks/ezee_constellate/templates/dashboard.mustache
@@ -22,9 +22,9 @@
         </div>
     </div>
 </div>
-<!-- <img class="constellate-logo" src='{{logourl}}' style="display:none" /> -->
 
 <hr class="constellate-separator">
+<span>{{timeremaining}}</span>
 
 <div class="constellate-chart-container pie">
     <div id="ChartPercentage" class="chart-percentage-label"></div>
