Full page matrix view

--- a/moodle/blocks/ezee_constellate/templates/footer.mustache
+++ b/moodle/blocks/ezee_constellate/templates/footer.mustache
@@ -1,6 +1,7 @@
 <br>
 
 <a id="constellate-toggle-btn" class="btn btn-primary btn-constellate" href='javascript: ToggleView();'>Show Activity</a>
+<a id="constellate-toggle-btn" class="btn btn-primary btn-constellate" href='/blocks/ezee_constellate/matrix.php' target="_blank">Matrix View</a>
 <!-- <a id="constellate-toggle-btn" class="btn btn-primary btn-constellate" href='javascript: printDiv();'>Export PDF</a> -->
 
 <script type="text/javascript">
